main.tf
provider "aws" {
  region     = "eu-west-3"
  secret_key = var.cle_secret
  access_key = var.cle_access
}
variable "cle_secret" {}
variable "cle_access" {}
variable "vpc_cidr_block" {}
variable "subnet_cidr_block" {}
variable "available_zone" {}
variable "env_prefix" {}
variable "my_ip" {}
variable "ami" {}
variable "instance_type" {}
variable "my_ssh_key" {}

resource "aws_vpc" "myapp-vpc" {
  cidr_block = var.vpc_cidr_block
  tags = {
    Name = "${var.env_prefix}-vpc"
  }
}

resource "aws_subnet" "myapp-subnet-1" {
  vpc_id            = aws_vpc.myapp-vpc.id
  cidr_block        = var.subnet_cidr_block
  availability_zone = var.available_zone
  tags = {
    Name = "${var.env_prefix}-subnet-1"
  }
}

resource "aws_internet_gateway" "myapp-igw" {
  vpc_id = aws_vpc.myapp-vpc.id


  tags = {
    Name : "${var.env_prefix}-igw"
  }
}

resource "aws_route_table" "myapp-route-table" {
  vpc_id = aws_vpc.myapp-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.myapp-igw.id
  }
  tags = {
    Name : "${var.env_prefix}-rtb"
  }
}

resource "aws_route_table_association" "a-rtb-subnet" {
  subnet_id      = aws_subnet.myapp-subnet-1.id
  route_table_id = aws_route_table.myapp-route-table.id
}

resource "aws_security_group" "myapp-SG" {
  name   = "myapp-SG"
  vpc_id = aws_vpc.myapp-vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.my_ip]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
    prefix_list_ids = []
  }

  tags = {
    Name : "${var.env_prefix}-sg"
  }
}
/*
data "aws_ami" "lates-amazon-linux-image" {
    most_recent = true
    owners = ["amazon"]
    filter {

    }
}*/

resource "aws_key_pair" "ssh-key" {
  key_name   = "server-key"
  public_key = var.my_ssh_key
}

output "ec2_public_ip" {
  value       = "aws_instance.myapp-instance.public_ip"
  description = "Public Ip of the ec2"
}


resource "aws_instance" "myapp-instance" {
  ami           = var.ami
  instance_type = var.instance_type

  subnet_id              = aws_subnet.myapp-subnet-1.id
  vpc_security_group_ids = [aws_security_group.myapp-SG.id]
  availability_zone      = var.available_zone

  associate_public_ip_address = true
  key_name                    = "server-key-pair"

  tags = {
    Name : "${var.env_prefix}-server"
  }

}
